dev/Si_interative_sampling/sample2/job.err
  File "mc_sampler_iterate.py", line 159
    def merge_files(self,i_iteration):
                                     ^
IndentationError: unindent does not match any outer indentation level
  File "mc_sampler_iterate.py", line 159
    def merge_files(self,i_iteration):
                                     ^
IndentationError: unindent does not match any outer indentation level
  File "mc_sampler_iterate.py", line 159
    def merge_files(self,i_iteration):
                                     ^
IndentationError: unindent does not match any outer indentation level
  File "mc_sampler_iterate.py", line 159
    def merge_files(self,i_iteration):
                                     ^
IndentationError: unindent does not match any outer indentation level
rm: cannot remove `/tmp/6016.1.all.q/rsh': No such file or directory
